# pyleeds

./: LICENSE  README.md
chflow_couette/: CMakeLists.txt
chflow_couette/lib/include/channelflow/: array.h  bandedtridiag.h  basisfunc.h  chebyshev.h  complexdefs.h  diffops.h  dns.h  dns_clean.h  flowfield.h  helmholtz.h  mathdefs.h  periodicfunc.h  poissonsolver.h  quicksort.h  realprofile.h  realprofileng.h  symmetry.h  tausolver.h  turbstats.h  utilfuncs.h  vector.h
chflow_couette/res/: settings.ini
chflow_couette/src/: couette.cpp
chflow_couette/src/thequick_light/: CMakeLists.txt  iniparser_light.cpp  iniparser_light.h  libtools_light.h  stringtools_light.cpp  stringtools_light.h
postproc/: animation.py  auxtools.py  communication.py  field.py  plotting.py  report.py  research.py  settings.py  test_fields.py
postproc/chflow/: aux.py  continuation.py  timeintegration.py
